// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContainerTableRow it renders a table row 1`] = `
<WithStyles(ForwardRef(TableRow))
  className="makeStyles-tableRow-1"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(TableCell))>
    <Link
      as="/resource/https%3A%2F%2Fexample.com%2Fexample.ttl"
      href="/resource/[iri]"
    >
      <a>
        /example.ttl
      </a>
    </Link>
  </WithStyles(ForwardRef(TableCell))>
  <WithStyles(ForwardRef(TableCell))
    key="https://example.com/example.ttl"
  >
    <WithStyles(ForwardRef(Skeleton))
      variant="text"
      width={100}
    />
  </WithStyles(ForwardRef(TableCell))>
</WithStyles(ForwardRef(TableRow))>
`;

exports[`ContainerTableRow it renders a table row with loaded data 1`] = `
<WithStyles(ForwardRef(TableRow))
  className="makeStyles-tableRow-1"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(TableCell))>
    <Link
      as="/resource/https%3A%2F%2Fexample.com%2Fexample.ttl"
      href="/resource/[iri]"
    >
      <a>
        /example.ttl
      </a>
    </Link>
  </WithStyles(ForwardRef(TableCell))>
  <WithStyles(ForwardRef(TableCell))
    key="https://example.com/example.ttl-type"
  >
    some-type
  </WithStyles(ForwardRef(TableCell))>
</WithStyles(ForwardRef(TableRow))>
`;

exports[`ContainerTableRow it renders a table row with loaded data without a type 1`] = `
<WithStyles(ForwardRef(TableRow))
  className="makeStyles-tableRow-1"
  onClick={[Function]}
>
  <WithStyles(ForwardRef(TableCell))>
    <Link
      as="/resource/https%3A%2F%2Fexample.com%2Fexample.ttl"
      href="/resource/[iri]"
    >
      <a>
        /example.ttl
      </a>
    </Link>
  </WithStyles(ForwardRef(TableCell))>
  <WithStyles(ForwardRef(TableCell))
    key="https://example.com/example.ttl-type"
  >
    <Component />
  </WithStyles(ForwardRef(TableCell))>
</WithStyles(ForwardRef(TableRow))>
`;
